# Space-Haven-Save-Game-Editor

./: .gitignore  LICENSE  README.md
python/: CONVERSION_COMPLETE.md  DEVELOPER_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LOGGING.md  OVERVIEW.md  QUICKSTART.md  README_PYTHON.md  SCANNER.md  crew_editors.py  example_scanner_usage.py  models.py  notes.txt  pyproject.toml  reference_data.py  run_editor.sh  save_manager.py  save_scanner.py  settings_dialog.py  setup.py  space-haven-editor.desktop  space_haven_editor.py  version_analyzer.py
